migrated docker to graalvm native build